base page for all config channel

--- a/src/main/resources/admin/partials/upstreams.html
+++ b/src/main/resources/admin/partials/upstreams.html
@@ -1,5 +1,5 @@
 <div class="ui form" id="upstream" ng-controller="UpstreamsCtrl">
-    <table class="ui compact celled definition table">
+    <table class="ui very compact celled definition table">
         <thead>
         <tr>
             <th></th>
