--- a/src/main/resources/admin/partials/upstreams.html
+++ b/src/main/resources/admin/partials/upstreams.html
@@ -1,24 +1,31 @@
-<div class="ui form" id="upstream" ng-controller="UpstreamsCtrl">
-    <table class="ui very compact celled definition table">
-        <thead>
-        <tr>
-            <th></th>
-            <th>Name</th>
-            <th>Priority</th>
-            <th>Base Url</th>
-            <th>Pure Maven</th>
-            <th>Get Only</th>
-            <th>Use Proxy</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="upstream in upstreams" >
-            <td class="collapsing">
-                        <span class="ui tiny basic icon button" ng-click="toggleDisable(upstream)">
-                            <i class="teal icon" ng-class="{remove: !upstream.disabled, checkmark: upstream.disabled}"></i>
+<div ng-controller="UpstreamsCtrl">
+    <div class="ui form" id="upstream">
+        <table class="ui very compact celled table">
+            <thead>
+            <tr>
+                <th>&nbsp;</th>
+                <th>Name</th>
+                <th>Priority</th>
+                <th>Base Url</th>
+                <th data-content="Many repositories use maven-only uri layout, we call these 'Pure Maven', repositories that built with sbt in mind serve ivy layout as well."
+                    class="withPopup">Pure Maven
+                </th>
+                <th>Get Only</th>
+                <th>Use Proxy</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="upstream in upstreams">
+                <td class="collapsing">
+                        <span class="ui tiny basic icon button" ng-click="toggleDisable(upstream.repo)">
+                            <i class="teal icon"
+                               ng-class="{ban: !upstream.repo.disabled, checkmark: upstream.repo.disabled}"></i>
                         </span>
-                        <span class="ui tiny basic icon button">
+                        <span class="ui tiny basic icon button" ng-click="showEditRepoDialog(upstream)">
                             <i class="edit teal icon"></i>
+                        </span>
+                        <span class="ui tiny basic icon button" ng-click="deleteRepo(upstream.repo)">
+                            <i class="remove up teal icon"></i>
                         </span>
                         <span class="ui tiny basic icon button">
                             <i class="angle up teal icon"></i>
@@ -26,44 +33,160 @@
                         <span class="ui tiny basic icon button">
                             <i class="angle down teal icon"></i>
                         </span>
-            </td>
-            <td ng-class="{disabled: upstream.disabled}">{{upstream.name}}</td>
-            <td ng-class="{disabled: upstream.disabled}">{{upstream.priority}}</td>
-            <td ng-class="{disabled: upstream.disabled}">{{upstream.base}}</td>
-            <td>
-                <div class="inline field">
-                    <div class="ui toggle checkbox">
-                        <input type="checkbox" ng-model="upstream.maven">
-                        <label>{{upstream.maven ? 'Yes' : 'No'}}</label>
+                </td>
+                <td ng-class="{disabled: upstream.repo.disabled}">{{upstream.repo.name}}</td>
+                <td ng-class="{disabled: upstream.repo.disabled}">{{upstream.repo.priority}}</td>
+                <td ng-class="{disabled: upstream.repo.disabled}">{{upstream.repo.base}}</td>
+                <td>
+                    <div class="inline field">
+                        <div class="ui toggle checkbox">
+                            <input type="checkbox"
+                                   ng-model="upstream.repo.maven">
+                            <label>{{upstream.repo.maven ? 'Yes' : 'No'}}</label>
+                        </div>
                     </div>
-                </div>
-            </td>
-            <td>
-                <div class="inline field">
-                    <div class="ui toggle checkbox">
-                        <input type="checkbox" ng-model="upstream.getOnly">
-                        <label>{{upstream.getOnly ? 'Yes' : 'No'}}</label>
+                </td>
+                <td>
+                    <div class="inline field">
+                        <div class="ui toggle checkbox">
+                            <input type="checkbox"
+                                   ng-model="upstream.repo.getOnly">
+                            <label>{{upstream.repo.getOnly ? 'Yes' : 'No'}}</label>
+                        </div>
                     </div>
-                </div>
-            </td>
-            <td>
-                <select  ng-options="proxy.name for proxy in proxies" ng-model="upstream.proxy"
-                        ng-disabled="upstream.disable">
-                    <option value="">No Proxy</option>
-                </select>
-            </td>
-        </tr>
-        </tbody>
-        <tfoot class="full-width">
-        <th colspan="7">
-            <a class="ui right floated labeled icon teal button">
-                <i class="plus icon"></i> Add Repo
-            </a>
-        </th>
-        </tfoot>
-    </table>
-</div>
+                </td>
+                <td>
+                    {{upstream.proxy | displayProxy}}
+                </td>
+            </tr>
+            </tbody>
+            <tfoot class="full-width">
+            <tr>
+                <th colspan="7">
+                    <a class="ui right floated labeled icon teal button" ng-click="showNewRepoDialog()">
+                        <i class="plus icon"></i> Add Repo
+                    </a>
+                </th>
+            </tr>
+            </tfoot>
+        </table>
+    </div>
 
-<div class="ui modal" id="addRepoDialog">
-    some fake content
+    <div class="ui modal" id="newRepoDialog">
+        <i class="close icon"></i>
+
+        <div class="ui dividing center aligned header">
+            Add New Upstream Repo
+        </div>
+        <div class="content">
+            <div class="ui form">
+                <div class="required field">
+                    <label for="new-repo-name">Name</label>
+                    <input id="new-repo-name" type="text" ng-model="newUpstream.repo.name"/>
+                </div>
+                <div class="required field">
+                    <label for="new-repo-base">Base Url</label>
+                    <input id="new-repo-base" type="text" ng-model="newUpstream.repo.base"/>
+                </div>
+                <div class="required field">
+                    <label for="new-repo-priority">Priority</label>
+                    <select id="new-repo-priority"
+                            ng-model="newUpstream.repo.priority"
+                            ng-options="i for i in [1,2,3,4,5,6,7,8,9,10]"></select>
+                </div>
+                <div class="two fields">
+                    <div class="field">
+                        <label for="new-repo-maven">Pure Maven</label>
+
+                        <div class="ui toggle checkbox">
+                            <input id="new-repo-maven"
+                                   type="checkbox"
+                                   ng-model="newUpstream.repo.maven">
+                            <label ng-click="toggleMaven(newUpstream.repo)">{{newUpstream.repo.maven ? 'Yes' : 'No'}}</label>
+                        </div>
+                    </div>
+                    <div class="field">
+                        <label for="new-repo-get-only">Get Only</label>
+
+                        <div class="ui toggle checkbox">
+                            <input id="new-repo-get-only"
+                                   type="checkbox"
+                                   ng-model="newUpstream.repo.getOnly">
+                            <label ng-click="toggleGetOnly(newUpstream.repo)">{{newUpstream.repo.getOnly ? 'Yes' : 'No'}}</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="field">
+                    <label for="new-repo-proxy">Use Proxy</label>
+                    <select id="new-repo-proxy"
+                            ng-model="newUpstream.proxy"
+                            ng-options="proxy.name for proxy in proxies">
+                        <option value="">No Proxy</option>
+                    </select>
+                </div>
+                <div class="ui teal fluid large submit button"
+                     ng-click="submitNewRepo()">Submit
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="ui modal" id="editRepoDialog">
+        <i class="close icon"></i>
+
+        <div class="ui dividing center aligned header">
+            Edit Upstream Repo
+        </div>
+        <div class="content">
+            <div class="ui form">
+                <div class="required field">
+                    <label for="edit-repo-name">Name</label>
+                    <input id="edit-repo-name" type="text" ng-model="editUpstream.repo.name"/>
+                </div>
+                <div class="required field">
+                    <label for="edit-repo-base">Base Url</label>
+                    <input id="edit-repo-base" type="text" ng-model="editUpstream.repo.base"/>
+                </div>
+                <div class="field">
+                    <label for="edit-repo-priority">Priority</label>
+                    <select id="edit-repo-priority"
+                            ng-model="editUpstream.repo.priority"
+                            ng-options="i for i in [1,2,3,4,5,6,7,8,9,10]"></select>
+                </div>
+                <div class="two fields">
+                    <div class="field">
+                        <label for="edit-repo-maven">Pure Maven</label>
+
+                        <div class="ui toggle checkbox">
+                            <input id="edit-repo-maven"
+                                   type="checkbox"
+                                   ng-model="editUpstream.repo.maven">
+                            <label ng-click="toggleMaven(editUpstream.repo)">{{editUpstream.repo.maven ? 'Yes' : 'No'}}</label>
+                        </div>
+                    </div>
+                    <div class="field">
+                        <label for="edit-repo-get-only">Get Only</label>
+
+                        <div class="ui toggle checkbox">
+                            <input id="edit-repo-get-only"
+                                   type="checkbox"
+                                   ng-model="editUpstream.repo.getOnly">
+                            <label ng-click="toggleGetOnly(editUpstream.repo)">{{editUpstream.repo.getOnly ? 'Yes' : 'No'}}</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="field">
+                    <label for="edit-repo-proxy">Use Proxy</label>
+                    <select id="edit-repo-proxy"
+                            ng-model="editUpstream.proxy"
+                            ng-options="proxy.name for proxy in proxies">
+                        <option value="">No Proxy</option>
+                    </select>
+                </div>
+                <div class="ui teal fluid large submit button"
+                     ng-click="submitEditRepo()">Submit
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
