upstream positioning implemented

--- a/src/main/resources/admin/partials/expireRules.html
+++ b/src/main/resources/admin/partials/expireRules.html
@@ -1,6 +1,6 @@
 <div ng-controller="ExpireRulesCtrl">
     <div class="ui form" id="expireRules">
-        <table class="ui very compact celled definition table">
+        <table class="ui very compact celled table">
             <thead>
             <tr>
                 <th></th>
