--- a/src/main/resources/admin/partials/immediate404Rules.html
+++ b/src/main/resources/admin/partials/immediate404Rules.html
@@ -1,6 +1,6 @@
 <div ng-controller="Immediate404RulesCtrl">
     <div class="ui form" id="immediate404Rule">
-        <table class="ui very compact celled definition table">
+        <table class="ui very compact celled table">
             <thead>
             <tr>
                 <th></th>
