--- a/src/main/resources/admin/partials/proxies.html
+++ b/src/main/resources/admin/partials/proxies.html
@@ -1,6 +1,6 @@
 <div ng-controller="ProxiesCtrl">
     <div class="ui form" id="proxies">
-        <table class="ui very compact celled definition table">
+        <table class="ui very compact celled table">
             <thead>
             <tr>
                 <th></th>
